Werkzeug Changelog
==================


Version 0.2
-----------
(codename to be selected, release date to be announced)

- Added `AnyConverter` to the routing system.
- Added `werkzeug.contrib.securecookie`
- Exceptions have a ``get_response()`` method that return a resposne object
- fixed the path ordering bug (#293), thanks Thomas Johansson


Version 0.1
-----------
(codename Wictorinoxger, release Dec 9th 2007)

- Initial release