@@ -574,6 +574,34 @@ class SharedDataMiddleware(object):
         return self.app(environ, start_response)
 
 
+class DispatcherMiddleware(object):
+    """
+    Allows one to mount middlewares or application in a WSGI application.
+    This is useful if you want to combine multiple WSGI applications.
+    """
+
+    def __init__(self, app, mounts=None):
+        self.app = app
+        self.mounts = mounts or {}
+
+    def __call__(self, environ, start_response):
+        script = environ.get('PATH_INFO', '')
+        path_info = ''
+        while '/' in script:
+            if script in self.mounts:
+                app = self.mounts[script]
+                break
+            items = script.split('/')
+            script = items[:-1].join('/')
+            path_info = '/%s%s' % (items[-1], path_info)
+        else:
+            app = self.mapping.get(script, self.app)
+        original_script_name = environ.get('SCRIPT_NAME', '')
+        environ['SCRIPT_NAME'] = original_script_name + script_name
+        environ['PATH_INFO'] = path_info
+        return app(environ, start_response)
+
+
 class ClosingIterator(object):
     """
     A class that wraps an iterator (which can have a close method) and
